# Model/userModel.js
@@ -7,10 +7,15 @@ const userSchema = new mongoose.Schema({
     enum: ['Umuturage', 'Mutwarasibo', 'Mudugudu', 'Gitifu w’Akagari'],
     required: true,
   },
-  name: { type: String, required: true },
-  email: { type: String, unique: true, required: true },
-  password: { type: String, required: true },
-  phone: { type: String, required: true },
+  FullName: { type: String, required: true },
+  Province: { type: String, required: true},
+  District:{ type: String, required: true},
+  Sector:{ type: String, required: true},
+  Cell:{ type: String, required: true},
+  Village:{ type: String, required: true},
+  Email: { type: String, unique: true, required: true },
+  Password: { type: String, required: true },
+  Telephone: { type: String, required: true },
   otp: { type: Number },
   otpExpiry: { type: Date },
   verified:{
